syntax = "proto3";

package jvmstatistics;

option java_package = "com.criteo.jvm";
option java_outer_classname = "JVMStatisticsProtos";

message JVMStatisticsData {
    message Property {
        string name = 1;
        string value = 2;
    }
    message Section {
        string name = 1;
        repeated Property property = 2;
    }
    repeated Section section = 1;
}

message GCStatisticsData {
    string collector_name = 1;
    int64 pause_time = 2;
    string cause = 3;
    int64 eden_before = 4;
    int64 eden_after = 5;
    int64 survivor_before = 6;
    int64 survivor_after = 7;
    int64 old_before = 8;
    int64 old_after = 9;
    int64 code_before = 10;
    int64 code_after = 11;
    int64 metaspace_before = 12;
    int64 metaspace_after = 13;
}